# Webtapu-Extractor-App

./: .gitignore  README.md  app.py  data_extractor.py  main.py  pdf_processor.py  pyproject.toml  requirements.txt  table_extractor.py  text_processor.py  watermark_remover.py
templates/: about.html  base.html  index.html
